--- a/classroom.html
+++ b/classroom.html
@@ -18,8 +18,20 @@
       pointer-events: none;
       transition: opacity 1s ease-in-out;
     }
+
+  #fade-in {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+  }
 </style>
 <body>
+  <div id="fade-in"></div>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -140,7 +152,7 @@
 (,,)_|_|     |_|_|                                                                  |_|
    /_o_\ -------------.          .-------------. .- ,     .-------------.           |_o
     | | |\             \         |\             /  \ )    |\             \           ╱
-    . .  \\_____________\         \\___________ \  (𐙚)     \\_____________          .
+    . .  \\_____________\         \\___________ \  (𐙚)     \\_____________\         .
           \,------------'          \,----------- -'-        \,------------'
                                                 / | \
               .-------------.          .-------------.          .-------------.
@@ -520,7 +532,7 @@
     | | |\        /     \        |\        // ^ \\        |\             \
     . .  \\_____  \,,,,,/         \\_____ ()\   /()        \\_____________\
           \,------ .-'-.           \,------ .-'-.           \,------------'
-                   |_|_|                   //   \\
+                   |___|                   //   \\
               .-------------.          .-------------.         . - . ----- . - .
               |\             \         |\             \       /  / \      / \  \
                \\_____________\         \\_____________\      \_/  / ____ \  (  )
@@ -531,11 +543,207 @@
                      \\_____________\         \\_____________\  . .    \\_____________\
                       \,------------'          \,------------'          \,------------'
       </pre>
-      <div id="fade"></div>
+      <pre id="self24" style="display: none;">
+   . - .      .-.                      . - .
+  /  / \    (/   \)                   /  \ \
+ (  )  /     \   /                    \  (__)
+,'  /'-.     .-'-.                    .-'-.
+(,,)_|_|     |___|                    |_|_|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .-------------.             .
+    | | |\        /     \        |\        // ^ \\        |\             \            /
+    . .  \\_____  \,,,,,/         \\_____ ()\   /()        \\_____________\           \
+          \,------ .-'-.           \,------ .-'-.           \,------------'           .
+                   |___|                   //   \\                                    |
+              .-------------.          .-------------.         . - . ----- . - .      |
+              |\             \         |\             \       /  / \      / \  \
+               \\_____________\         \\_____________\      \_/  / ____ \  (  )
+                \,------------'          \,------------'       .-'-. ---- .-'\  ',
+                                                               |_|_|      |_|_(,,)
+                    .-------------.          .-------------.   |_o_|  .-------------.
+                    |\             \         |\             \   | |   |\             \
+                     \\_____________\         \\_____________\  . .    \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self25" style="display: none;">
+   . - .      .-.                      . - .
+  /  / \    (/   \)                   /  \ \
+ (  )  /     \   /                    \  (__)
+,'  /'-.     .-'-.                    .-'-.
+(,,)_|_|     |___|                    |_|_|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .-------------.           . -
+    | | |\        /     \        |\        // ^ \\        |\             \          / \
+    . .  \\_____  \,,,,,/         \\_____ ()\   /()        \\_____________\         \
+          \,------ .-'-.           \,------ .-'-.           \,------------'         .-'
+                   |___|                   //   \\                                  |_|
+              .-------------.          .-------------.         . - . ----- . - .    |_o
+              |\             \         |\             \       /  / \      / \  \     ╱
+               \\_____________\         \\_____________\      \_/  / ____ \  (  )   .
+                \,------------'          \,------------'       .-'-. ---- .-'\  ',
+                                                               |_|_|      |_|_(,,)
+                    .-------------.          .-------------.   |_o_|  .-------------.
+                    |\             \         |\             \   | |   |\             \
+                     \\_____________\         \\_____________\  . .    \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self26" style="display: none;">
+   . - .      .-.                      . - .
+  /  / \    (/   \)                   /  \ \
+ (  )  /     \   /                    \  (__)
+,'  /'-.     .-'-.                    .-'-.
+(,,)_|_|     |___|                    |_|_|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .-------------.         . - .
+    | | |\        /     \        |\        // ^ \\        |\             \        / \ \
+    . .  \\_____  \,,,,,/         \\_____ ()\   /()        \\_____________\       \  (
+          \,------ .-'-.           \,------ .-'-.           \,------------'       .-'-.
+                   |___|                   //   \\                                |_|_|
+              .-------------.          .-------------.         . - . ----- . - .  |_o_|
+              |\             \         |\             \       /  / \      / \  \    ╳
+               \\_____________\         \\_____________\      \_/  / ____ \  (  )  . .
+                \,------------'          \,------------'       .-'-. ---- .-'\  ',
+                                                               |_|_|      |_|_(,,)
+                    .-------------.          .-------------.   |_o_|  .-------------.
+                    |\             \         |\             \   | |   |\             \
+                     \\_____________\         \\_____________\  . .    \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self27" style="display: none;">
+   . - .      .-.                      . - .
+  /  / \    (/   \)                   /  \ \
+ (  )  /     \   /                    \  (__)
+,'  /'-.     .-'-.                    .-'-.
+(,,)_|_|     |___|                    |_|_|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .-------------.       . - .
+    | | |\        /     \        |\        // ^ \\        |\             \      / \ \
+    . .  \\_____  \,,,,,/         \\_____ ()\   /()        \\_____________\     \  (_)
+          \,------ .-'-.           \,------ .-'-.           \,------------'     .-'-.
+                   |___|                   //   \\                              |_|_|
+              .-------------.          .-------------.         . - . ----- . - . _o_|
+              |\             \         |\             \       /  / \      / \  \ ╱ ╲
+               \\_____________\         \\_____________\      \_/  / ____ \  (  )   .
+                \,------------'          \,------------'       .-'-. ---- .-'\  ',
+                                                               |_|_|      |_|_(,,)
+                    .-------------.          .-------------.   |_o_|  .-------------.
+                    |\             \         |\             \   | |   |\             \
+                     \\_____________\         \\_____________\  . .    \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self28" style="display: none;">
+   . - .      .-.
+  /  / \     / \ \
+ (  )  /     \  \/
+,'  /'-.     .-'-.
+(,,)_|_|     |___|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .--------- . - .
+    | | |\        /     \        |\        // ^ \\        |\        //   \\
+    . .  \\_____  \,,,,,/         \\_____ ()\   /()        \\______ (\   /)
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                   |___|                   //   \\                  /|___|\
+             . - . --- . - .           .-------------.         . - . ----- . - .
+            / /  \    / \  \ \         |\             \       /  / \      /     \
+           (__)  / __ \  \_/ _\         \\_____________\      \_/  / ___ (       )
+             .-'-. --- .-'-. -'          \,------------'       .-'-. --- .'     '.
+             |_|_|     |___|                                   |_|_|     (,,,,,,,)
+             |_o_|  .-------------.          .-------------.   |_o_|  .-------------.
+              | |   |\             \         |\             \   | |   |\             \
+              . .    \\_____________\         \\_____________\  . .    \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self29" style="display: none;">
+   . - .      .-.
+  /  / \     / \ \
+ (  )  /     \  \/
+,'  /'-.     .-'-.
+(,,)_|_|     |___|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .--------- . - .
+    | | |\        /     \        |\        // ^ \\        |\        //   \\
+    . .  \\_____  \,,,,,/         \\_____ ()\   /()        \\______ (\   /)
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                   |___|                   //   \\                  /|___|\
+             . - . -- . - . .          .-------------.         . - . ----- . - .
+            / /  \   / \  \  \         |\             \       / \  \      /     \
+           (__)  / _ \  \_/ __\         \\_____________\      \  \_/ ___ (       )
+             .-'-. -- .-'-. --'          \,------------'       .-'-. --- .'     '.
+             |_|_|    |___|                                    |_|_|     (,,,,,,,)
+             |_o_|  .-------------.          .-------------.   |_o_|  .-------------.
+              | |   |\             \         |\             \   | |   |\             \
+              . .    \\_____________\         \\_____________\  . .    \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self30" style="display: none;">
+   . - .      .-.
+  /  / \     / \ \
+ (  )  /     \  \/
+,'  /'-.     .-'-.
+(,,)_|_|     |___|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .--------- . - .
+    | | |\        // ^ \\        |\        // ^ \\        |\        //   \\
+    . .  \\_____ (_\   /_)        \\_____ ()\   /()        \\______ (\   /)
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                  /|___|\                  //   \\                  /|___|\
+             . - . -- . - . .          .-------------.       . - . ------- . - .
+            / /  \   / \  \  \         |\             \     / \  \        /     \
+           (__)  / _ \  \_/ __\         \\_____________\    \  \_/ _____ (       )
+             .-'-. -- .-'-. --'          \,------------'     .-'-. ,---- .'     '.
+             |_|_|    |___|                                  |_|_|       (,,,,,,,)
+             |_o_|  .-------------.          .-------------. |_o_|    .-------------.
+              | |   |\             \         |\             \  ╳      |\             \
+              . .    \\_____________\         \\_____________\. .      \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self31" style="display: none;">
+   . - .      .-.
+  /  / \     / \ \
+ (  )  /     \  \/
+,'  /'-.     .-'-.
+(,,)_|_|     |___|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .--------- . - .
+    | | |\        // ^ \\        |\        // ^ \\        |\        //   \\
+    . .  \\_____ (_\   /_)        \\_____ ()\   /()        \\______ (\   /)
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                  /|___|\                  //   \\                  /|___|\
+             . - . -- . - . .          .-------------.     . - . --------- . - .
+            / /  \   / \  \  \         |\             \   / \  \ \        /     \
+           (__)  / _ \  \_/ __\         \\_____________\  \  \_/ \\_____ (       )
+             .-'-. -- .-'-. --'          \,------------'   .-'-.  \,---- .'     '.
+             |_|_|    |___|                                |_|_|         (,,,,,,,)
+             |_o_|  .-------------.          .-------------._o_|      .-------------.
+              | |   |\             \         |\             \ ╲       |\             \
+              . .    \\_____________\         \\_____________\ .       \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self32" style="display: none;">
+   . - .      .-.
+  /  / \     / \ \
+ (  )  /     \  \/
+,'  /'-.     .-'-.
+(,,)_|_|     |___|
+   /_o_\ --------- . - .         .--------- . -౨ৎ.        .--------- . - .
+    | | |\        // ^ \\        |\        // ^ \\        |\        //   \\
+    . .  \\_____ (_\   /_)        \\_____ ()\   /()        \\______ (\   /)
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                  /|___|\                  //   \\                  /|___|\
+             . - . -- . - . .          .-------------.   . - .  .--------- . - .
+            / /  \   / \  \  \         |\             \ / \  \  |\        /     \
+           (__)  / _ \  \_/ __\         \\_____________\\  \_/   \\_____ (       )
+             .-'-. -- .-'-. --'          \,------------' .-'-.    \,---- .'     '.
+             |_|_|    |___|                              |_|_|           (,,,,,,,)
+             |_o_|  .-------------.          .-------------._|        .-------------.
+              | |   |\             \         |\             \         |\             \
+              . .    \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
     </div>
   </div>
+  <div id="fade"></div>
   <script>
-    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23"];
+    window.onload = function() {
+      document.getElementById("fade-in").style.opacity = "0";
+      setTimeout(() => {
+        document.getElementById("fade-in").style.display = "none";
+      }, 1000);
+    };
+
+    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32"];
     let currentFrame = 0;
 
     function updateFrame() {
@@ -545,11 +753,15 @@
       const fade = document.getElementById("fade");
       if (currentFrame >= 18 && currentFrame <= 19) {
         fade.style.opacity = 1;
+      } else if (currentFrame >= 26 && currentFrame <= 27) {
+        fade.style.opacity = 1;
+      } else if (currentFrame >= 31 && currentFrame <= 32) {
+        fade.style.opacity = 1;
       } else if (currentFrame >= 20) {
         fade.style.opacity = 0;
       }
 
-      if (currentFrame === 40) {
+      if (currentFrame === 32) {
         setTimeout(() => {
           window.location.href = "hallway.html";
         }, 700);
