--- a/kitchen.html
+++ b/kitchen.html
@@ -6,7 +6,32 @@
   <title>Main Page</title>
   <link rel="stylesheet" type="text/css" href="thesis.css">
 </head>
+<style>
+  #fade-in {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 1;
+    transition: opacity 2s ease-in-out;
+  }
+
+  #fade-out {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
+    pointer-events: none;
+  }
+</style>
 <body>
+  <div id="fade-in"></div>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -71,7 +96,15 @@ I'll just make some simple cereal for breakfast.
       </div>
     </div>
   </div>
+  <div id="fade-out"></div>
   <script>
+    window.onload = function() {
+      document.getElementById("fade-in").style.opacity = "0";
+      setTimeout(() => {
+        document.getElementById("fade-in").style.display = "none";
+      }, 2000);
+    };
+    
     document.getElementById('kitchen').addEventListener('click', function() {
       document.getElementById('dialogue-box').style.display = 'block';
       document.getElementById('kitchen').classList.remove('pointer');
@@ -83,7 +116,10 @@ I'll just make some simple cereal for breakfast.
     });
 
     document.getElementById('dialogue-box2').addEventListener('click', function() {
-      window.location.href = 'dining.html';
+      document.getElementById("fade-out").style.opacity = "1";
+      setTimeout(() => {
+        window.location.href = "dining.html";
+      }, 2000);
     });
   </script>
 </body>
