--- a/mirror.html
+++ b/mirror.html
@@ -14,11 +14,35 @@
     height: 100vh;
     margin: 0;
     font-family: monospace;
-    background-color: #ece6e3; /* initial background color */
-    transition: background-color 1s ease; /* smooth transition for background */
+    background-color: #ece6e3;
+    transition: background-color 1s ease;
+  }
+
+  #fade-in {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 1;
+    transition: opacity 2s ease-in-out;
+  }
+
+  #fade-out {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
+    pointer-events: none;
   }
 </style>
 <body>
+  <div id="fade-in"></div>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -82,7 +106,15 @@ The colors don't match... and my hair looks awful.
       </div>
     </div>
   </div>
+  <div id="fade-out"></div>
   <script>
+    window.onload = function() {
+      document.getElementById("fade-in").style.opacity = "0";
+      setTimeout(() => {
+        document.getElementById("fade-in").style.display = "none";
+      }, 2000);
+    };
+
     const dialogueSteps = [
       {
         dialogue: "dialogue-box1",
@@ -182,63 +214,10 @@ The colors don't match... and my hair looks awful.
     document.getElementById("dialogue-box3").addEventListener("click", () => updateScene(2));
 
     document.getElementById("dialogue-box4").addEventListener("click", () => {
-      window.location.href = "hallway.html";
+      document.getElementById("fade-out").style.opacity = "1";
+      setTimeout(() => {
+        window.location.href = "hallway.html";
+      }, 2000);
     });
   </script>
   </body>
-<!-- </html>
-
-<pre id="ascii-mirror2">
-       ,/───`\
-     ,/       `\
-   ,/           `\
-  │|             |│
-  │|             |│
-  │|             |│
-  │|             |│
-(=│|    . - .    |│=)
- ││|   // ^ \\   |││
- ││|  / \   / \  |││
- ││| (_-.-'-.__) |││
- │ `\  /|   |\  ,/ │
- ││  `\'|   |' ,/ ││
- ││    `\────,/   ││
- ││               ││
-┍││┑             ┍││┑
-╰──╯             ╰──╯</pre>
- <pre id="ascii-mirror3">
-        ,/───`\
-      ,/       `\
-    ,/           `\
-   │|             |│
-   │|             |│
-   │|             |│
-   │|             |│
- (=│|    . - .    |│=)
-  ││|   // ^ \\   |││
-  ││|   |\   /|   |││
-  ││|   |.-'-.|   |││
-  │ `\  //   \\  ,/ │
-  ││  `\||   || ,/ ││
-  ││    `\────,/   ││
-  ││               ││
- ┍││┑             ┍││┑
- ╰──╯             ╰──╯</pre>
-  <pre id="ascii-mirror4">
-         ,/───`\
-       ,/       `\
-     ,/           `\
-    │|             |│
-    │|             |│
-    │|             |│
-    │|             |│
-  (=│|    . -౨ৎ.   |│=)
-   ││|   // ^ \\   |││
-   ││|  ()\   /()  |││
-   ││|    .-'-.    |││
-   │ `\  //   \\  ,/ │
-   ││  `\'|   |' ,/ ││
-   ││    `\────,/   ││
-   ││               ││
-  ┍││┑             ┍││┑
-  ╰──╯             ╰──╯</pre> -->
