--- a/morning.html
+++ b/morning.html
@@ -6,7 +6,20 @@
   <title>Main Page</title>
   <link rel="stylesheet" type="text/css" href="thesis.css">
 </head>
+<style>
+  #fade-in {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 1;
+    transition: opacity 2s ease-in-out;
+  }
+</style>
 <body>
+  <div id="fade-in"></div>
   <pre id="ascii-door">
     __________
    |          |
@@ -114,36 +127,14 @@ o(=(=(=(=)=)=)=)o
  !!!=========!!!
 _!!!_________!!!__
   </pre>
-  <!-- <div id="container">
-    <div id="dialogue-box" class="dialogue-box" style="display: none;">
-      <pre class="asciiAlign">╭─────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────┒
-│                             ┃
-│  *Your alarm is going off.* ┃
-│                             ┃
-│  What would you like to do? ┃
-│                             ┃
-│                             ┃
-│                             ┃
-│                             ┃</pre>
-      <pre class="pointer asciiAlign" onclick="chooseOption('A')">
-│                             ┃
-│  A. Turn it off and get up  ┃
-│                             ┃</pre>
-      <pre class="pointer asciiAlign" onclick="chooseOption('B')">
-│                             ┃
-│  B. Turn it off and         ┃
-│     continue sleeping       ┃</pre>
-      <pre class="pointer asciiAlign" onclick="chooseOption('C')">
-│                             ┃
-│  C. Sleep through it        ┃
-│                             ┃</pre>
-      <pre class="asciiAlign">
-│                             ┃
-┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
-      </pre>
-    </div>
-  </div> -->
   <script>
+    window.onload = function() {
+      document.getElementById("fade-in").style.opacity = "0";
+      setTimeout(() => {
+        document.getElementById("fade-in").style.display = "none";
+      }, 2000);
+    };
+
     let hours = 6;
     let minutes = 20;
     let period = "AM";
@@ -173,15 +164,13 @@ _!!!_________!!!__
     document.getElementById("dialogue-box").style.display = "block";
   }
 
-      // If 'B' is chosen, show second dialogue at 6:40 AM
       if (chosenOption === 'B' && hours === 6 && minutes === 40 && period === "AM") {
         clockRunning = false;
         document.getElementById("dialogue-box2").style.display = "block";
       }
 
-      // If '2A' is chosen, stop the clock at 6:50 AM
       if (chosenOption === '2A' && hours === 6 && minutes === 50 && period === "AM") {
-        clockRunning = false; // Stops the clock
+        clockRunning = false;
         document.getElementById("dialogue-box3").style.display = "block";
       }
 
@@ -196,7 +185,7 @@ _!!!_________!!!__
       document.getElementById("dialogue-box").style.display = "none";
 
       if (option === 'A' || option === '2B' || option === '3A') {
-        window.location.href = 'mirror.html';  // Redirect to mirror.html
+        window.location.href = 'mirror.html';
         return;
       }
 
@@ -206,44 +195,69 @@ _!!!_________!!!__
       }
 
       if (option === '2A') {
-        clockRunning = true; // Continue clock, but will stop at 6:50 AM
+        clockRunning = true;
         document.getElementById("dialogue-box2").style.display = "none";
       }
       if (option === '3B') {
-        clockRunning = true; // Continue clock, but will stop at 6:50 AM
+        clockRunning = true;
         document.getElementById("dialogue-box3").style.display = "none";
       }
     }
 
-
-    function replaceAsciiArt() {
-      document.getElementById("ascii-door").innerHTML = `<br><br><br><br><br>
-   __________
-  |\\         |
-  | \\        |
-  |  \\       |
-  |   \\      |
-  |    \\     |
-  |     |    |
-  |     | .-.|
-  |     |/   \\
-  |     |\\   /
-  |     |.-'-.
-  |     || V |\\\\
-  |     ||   |//
-__|     ||___|
-   \\    || | |
-    \\   || | |
-     \\  ||_!_|
-      \\ | ╚ ╚
-       \\|
-      `;
-    }
-
-    setInterval(updateClock, 50); // 1000 is normal, adjust to speed
+    setInterval(updateClock, 500);
 
     document.getElementById("dialogue-box4").onclick = function() {
       window.location.href = 'mirror.html';
+    };
+
+    function fadeToBlackAndRedirect() {
+      let fadeOverlay = document.createElement("div");
+      fadeOverlay.style.position = "fixed";
+      fadeOverlay.style.top = "0";
+      fadeOverlay.style.left = "0";
+      fadeOverlay.style.width = "100%";
+      fadeOverlay.style.height = "100%";
+      fadeOverlay.style.background = "black";
+      fadeOverlay.style.opacity = "0";
+      fadeOverlay.style.transition = "opacity 2s ease-in-out";
+      document.body.appendChild(fadeOverlay);
+
+      setTimeout(() => {
+        fadeOverlay.style.opacity = "1";
+      }, 10);
+
+      setTimeout(() => {
+        window.location.href = "mirror.html";
+      }, 2000);
+    }
+
+    function chooseOption(option) {
+      chosenOption = option;
+      document.getElementById("dialogue-box").style.display = "none";
+
+      if (option === 'A' || option === '2B' || option === '3A') {
+        fadeToBlackAndRedirect();
+        return;
+      }
+
+      if (option === 'B') {
+        clockRunning = true;
+        document.getElementById("dialogue-box2").style.display = "none";
+      }
+
+      if (option === '2A') {
+        clockRunning = true;
+        document.getElementById("dialogue-box2").style.display = "none";
+      }
+
+      if (option === '3B') {
+        clockRunning = true;
+        document.getElementById("dialogue-box3").style.display = "none";
+      }
+    }
+
+    document.getElementById("dialogue-box4").onclick = function() {
+      fadeToBlackAndRedirect();
     };
   </script>
   </body>
