--- a/street.html
+++ b/street.html
@@ -16,8 +16,32 @@
     #dialogue-box {
       display: none;
     }
+
+    #fade-in {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      opacity: 1;
+      transition: opacity 2s ease-in-out;
+    }
+
+    #fade-out {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      opacity: 0;
+      transition: opacity 2s ease-in-out;
+      pointer-events: none;
+    }
   </style>
 <body>
+  <div id="fade-in"></div>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -82,7 +106,15 @@ Oh... she was waving at her friend.
       </div>
     </div>
   </div>
+  <div id="fade-out"></div>
   <script>
+    window.onload = function() {
+      document.getElementById("fade-in").style.opacity = "0";
+      setTimeout(() => {
+        document.getElementById("fade-in").style.display = "none";
+      }, 2000);
+    };
+
     const asciiArtElement = document.getElementById('asciiArt');
     let currentFrame = 0;
     let intervalTime = 700;
