--- a/letters.html
+++ b/letters.html
@@ -600,3 +600,46 @@ FADE IN AND OUT CODE:
      window.location.href = "hallway.html";
    }, 2000);
  });
+
+  . - .
+ /     \
+(       )
+.'     '.
+(,,,,,,,)
+
+<pre id="self38" style="display: none;">
+
+
+
+
+
+  .-------------.          .--------- . -౨ৎ.        .-------------.
+  |\             \         |\        // ^ \\        |\             \
+   \\_____________\         \\_____ ()\   /()        \\_____________\
+    \,------------'          \,------ .-'-.           \,------------'
+                                     //   \\
+        .-------------.          .-------------.          .-------------.
+        |\             \         |\             \         |\             \
+         \\_____________\         \\_____________\         \\_____________\
+          \,------------'          \,------------'          \,------------'
+
+              .-------------.          .-------------.          .-------------.
+              |\             \         |\             \         |\             \
+               \\_____________\         \\_____________\         \\_____________\
+                \,------------'          \,------------'          \,------------'
+</pre>
+
+ . - .
+/     \
+\,,,,,/
+ .-'-.
+ |___|
+
+ . - .
+/  / \
+\_/  /
+ .-'-.
+ |_|_|
+ |_o_|
+  | |    
+  . .
