--- a/classroom.html
+++ b/classroom.html
@@ -732,6 +732,216 @@
               . .    \\_____________\         \\_____________\         \\_____________\
                       \,------------'          \,------------'          \,------------'
       </pre>
+      <pre id="self33" style="display: none;">
+             . - .                    . - .                    . - .
+            (/   \)                  // ^ \\                  // ^ \\
+             \   /                  ( \   / )                (_\   /_)
+             .-'-.                  / .-'-. \                  .-'-.
+            /|___|\                ( /|___|\ )                /|___|\
+        .--------- . - .         .--------- . -౨ৎ.        .--------- . - .
+        |\        // ^ \\        |\        // ^ \\        |\        //   \\
+         \\_____ (_\   /_)        \\_____ ()\   /()        \\______ (\   /)
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                  /|___|\                  //   \\                  /|___|\
+              .---------- .-.          .--------- . - .          .-------- . - .
+              |\         /   \         |\        (/   \)        |\        // ^ \\
+               \\_______ \   /          \\_______ \   /          \\_____ ( \   / )
+                \,------ .-'-.           \,------ .-'-.           \,---- .'.-'-.'.
+                        /|___|\                  /|___|\                ( /|___|\ )
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self34" style="display: none;">
+             . - .                    . - .                    . - .
+            (/   \)                  // ^ \\                  // ^ \\
+             \   /                  ( \   / )                (_\   /_)
+             .-'-.                  / .-'-. \                  .-'-.
+            /|___|\                ( /|___|\ )                /|___|\
+        .--------- . - .         .--------- . -౨ৎ.        .--------- . - .
+        |\        // ^ \\        |\        // ^ \\        |\        //   \\
+         \\_____ (_\   /_)        \\_____ ()\   /()        \\______ (\   /)
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                  /|___|\                  //   \\                  /|___|\
+              .---------- .-.          .--------- . - .          .-------- . - .
+              |\         /   \         |\        (/   \)        |\        // ^ \\
+               \\_______ \   /          \\_______ \   /          \\_____ ( \   / )
+                \,------ .-'-.           \,------ .-'-.           \,---- .'.-'-.'.
+                        /|___|\                  /|___|\                ( /|___|\ )
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self35" style="display: none;">
+   . - .      .-.           . - .      . - .
+  /  / \    (/   \)        /  / \     /  \ \
+ (  )  /     \   /         \_/  /     \  (__)
+,'  /'-.     .-'-.          .-'-.     .-'-.
+(,,)_|_|     |___|          |_|_|     |_|_|
+   /_o_\ ------ . - . .     |_o_|.--------- . -౨ৎ.        .--------- . - .
+    | | |\     /     \ \     | | |\        // ^ \\        |\        (/   \)
+    . .  \\__ (       ) \    . .  \\_____ ()\   /()        \\_______ \   /
+          \,- .'     '. '          \,------ .-'-.           \,------ .-'-.
+              (,,,,,,,)                    //   \\                  /|___|\
+              .-------------.          .-------------.         . - . ----- . - .
+              |\             \         |\             \       /  / \      / \  \
+               \\_____________\         \\_____________\      \_/  / ____ \  (  )
+                \,------------'          \,------------'       .-'-. ---- .-'\  ',
+                                                               |_|_|      |_|_(,,)
+                    .-------------.          .-------------.   |_o_|  .-------------.
+                    |\             \         |\             \   | |   |\             \
+                     \\_____________\         \\_____________\  . .    \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self36" style="display: none;">
+   . - .      .-.           . - .      . - .
+  /  / \    (/   \)        /  / \     /  \ \
+ (  )  /     \   /         \_/  /     \  (__)
+,'  /'-.     .-'-.          .-'-.     .-'-.
+(,,)_|_|     |___|          |_|_|     |_|_|
+   /_o_\ ------ . - . .     |_o_|.--------- . -౨ৎ.        .--------- . - .
+    | | |\     /     \ \     | | |\        // ^ \\        |\        (/   \)
+    . .  \\__ (       ) \    . .  \\_____ ()\   /()        \\_______ \   /
+          \,- .'     '. '          \,------ .-'-.           \,------ .-'-.
+              (,,,,,,,)                    //   \\                  /|___|\
+              .-------------.          .-------------.         . - . ----- . - .
+              |\             \         |\             \       /  / \      / \  \
+               \\_____________\         \\_____________\      \_/  / ____ \  (  )
+                \,------------'          \,------------'       .-'-. ---- .-'\  ',
+                                                               |_|_|      |_|_(,,)
+                    .-------------.          .-------------.   |_o_|  .-------------.
+                    |\             \         |\             \   | |   |\             \
+                     \\_____________\         \\_____________\  . .    \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self37" style="display: none;">
+             . - .                    . - .                     .-.
+            (/   \)                  //   \\                   / v \
+             \   /                  (_\   /_)                  \   /
+             .-'-.                    .-'-.                    .-'-.
+            /|___|\                  /|___|\                  /|___|\
+        .--------- . - .         .--------- . -౨ৎ.        .--------- . - .
+        |\        // ^ \\        |\        // ^ \\        |\        (/   \)
+         \\_____ ( \   / )        \\_____ ()\   /()        \\_______ \   /
+          \,---- / .-'-. \         \,------ .-'-.           \,------ .-'-.
+                ( /|___|\ )                //   \\                  /|___|\
+              .--------- . - .         .---------- .-.          .--------- . - .
+              |\        // ^ \\        |\         / v \         |\        // ^ \\
+               \\_____ ( \   / )        \\_______ \   /          \\_____ ( \   / )
+                \,---- |,.-'-.,|         \,------ .-'-.           \,---- / .-'-. \
+                        /|___|\                  /|___|\                ( /|___|\ )
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self38" style="display: none;">
+             . - .                    . - .                     .-.
+            (/   \)                  //   \\                   / v \
+             \   /                  (_\   /_)                  \   /
+             .-'-.                    .-'-.                    .-'-.
+            /|___|\                  /|___|\                  /|___|\
+        .--------- . - .         .--------- . -౨ৎ.        .--------- . - .
+        |\        // ^ \\        |\        // ^ \\        |\        (/   \)
+         \\_____ ( \   / )        \\_____ ()\   /()        \\_______ \   /
+          \,---- / .-'-. \         \,------ .-'-.           \,------ .-'-.
+                ( /|___|\ )                //   \\                  /|___|\
+              .--------- . - .         .---------- .-.          .--------- . - .
+              |\        // ^ \\        |\         / v \         |\        // ^ \\
+               \\_____ ( \   / )        \\_______ \   /          \\_____ ( \   / )
+                \,---- |,.-'-.,|         \,------ .-'-.           \,---- / .-'-. \
+                        /|___|\                  /|___|\                ( /|___|\ )
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self39" style="display: none;">
+                                                               . - .     . - .
+                                                              /  / \     / \  \
+                                                             (__)  /     \  (  )
+                                                               .-'-.     .-'\  ',
+                                                               |_|_|     |_|_(,,)
+        .---------- .-.          .--------- . -౨ৎ.        .-------------./_o_\
+        |\         / ^ \         |\        // ^ \\        |\             \| |
+         \\_______ \   /      . - . _____ ()\   /()        \\_____________\ .
+      . - . ------ .-'-.     / \  \ ,------ .-'-.           \,------------'
+     /  / \       /|_ . - .  \  (  )       //   \\
+    (__)  /   .----- /     \  .-'(,,,) .---------- . - .      . - . ----------.
+      .-'-.   |\     \,,,,,/ \|_|_|    |\         /  / \     / \  \            \
+      |_|_|    \\____ .-'-. __\_o_\     \\_______ \_/  /     \  (  ) ___________\
+      /_o_\     \,---/|___|\--'| |       \,------- .-'-.     .-'(,,,) -----------'
+       | |           '|   |'   . .                 |_|_|     |_|_|
+       . .          .-------------.          .-------------. |_o_|    .-------------.
+                    |\             \         |\             \ | |     |\             \
+                     \\_____________\         \\_____________\. .      \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self40" style="display: none;">
+                                                               . - .     . - .
+                                                              /  / \     / \  \
+                                                             (__)  /     \  (  )
+                                                               .-'-.     .-'\  ',
+                                                               |_|_|     |_|_(,,)
+        .---------- .-.          .--------- . -౨ৎ.        .-------------./_o_\
+        |\         / ^ \         |\        // ^ \\        |\             \| |
+         \\_______ \   /      . - . _____ ()\   /()        \\_____________\ .
+      . - . ------ .-'-.     / \  \ ,------ .-'-.           \,------------'
+     /  / \       /|_ . - .  \  (  )       //   \\
+    (__)  /   .----- /     \  .-'(,,,) .---------- . - .      . - . ----------.
+      .-'-.   |\     \,,,,,/ \|_|_|    |\         /  / \     / \  \            \
+      |_|_|    \\____ .-'-. __\_o_\     \\_______ \_/  /     \  (  ) ___________\
+      /_o_\     \,---/|___|\--'| |       \,------- .-'-.     .-'(,,,) -----------'
+       | |           '|   |'   . .                 |_|_|     |_|_|
+       . .          .-------------.          .-------------. |_o_|    .-------------.
+                    |\             \         |\             \ | |     |\             \
+                     \\_____________\         \\_____________\. .      \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self41" style="display: none;">
+             . - .                    . - .                    . - .
+            // v \\                  //   \\                  // ^ \\
+           (_\   /_)                (_\   /_)                ( \   / )
+             .-'-.                    .-'-.                  / .-'-. \
+            /|___|\                  /|___|\                ( /|___|\ )
+        .---------- .-.          .--------- . -౨ৎ.        .--------- . - .
+        |\         / v \         |\        // ^ \\        |\        //   \\
+         \\_______ \   /          \\_____ ()\   /()        \\______ |\   /|
+          \,------ .-'-.           \,------ .-'-.           \,---- ( .-'-. )
+                  /|___|\                  //   \\                  /|___|\
+              .--------- . - .         .---------- .-.          .--------- . - .
+              |\        //   \\        |\         /   \         |\        //   \\
+               \\______ |\   /|         \\________\   /          \\______( \   / )
+                \,------ .-'-.           \,------ .-'-.           \,---- ( .-'-. )
+                        /|___|\                  /|___|\                  /|___|\
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self42" style="display: none;">
+             . - .                    . - .                    . - .
+            // v \\                  //   \\                  // ^ \\
+           (_\   /_)                (_\   /_)                ( \   / )
+             .-'-.                    .-'-.                  / .-'-. \
+            /|___|\                  /|___|\                ( /|___|\ )
+        .---------- .-.          .--------- . -౨ৎ.        .--------- . - .
+        |\         / v \         |\        // ^ \\        |\        //   \\
+         \\_______ \   /          \\_____ ()\   /()        \\______ |\   /|
+          \,------ .-'-.           \,------ .-'-.           \,---- ( .-'-. )
+                  /|___|\                  //   \\                  /|___|\
+              .--------- . - .         .---------- .-.          .--------- . - .
+              |\        //   \\        |\         /   \         |\        //   \\
+               \\______ |\   /|         \\________\   /          \\______( \   / )
+                \,------ .-'-.           \,------ .-'-.           \,---- ( .-'-. )
+                        /|___|\                  /|___|\                  /|___|\
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
     </div>
   </div>
   <div id="fade"></div>
@@ -743,12 +953,47 @@
       }, 1000);
     };
 
-    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32"];
+    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32", "self33", "self34", "self35", "self36", "self37", "self38", "self39", "self40", "self41", "self42"];
     let currentFrame = 0;
 
     function updateFrame() {
       frames.forEach(id => document.getElementById(id).style.display = "none");
       document.getElementById(frames[currentFrame]).style.display = "block";
+
+      const clock = document.getElementById("clock");
+      if (currentFrame >= 0 && currentFrame < 20) {
+        clock.innerHTML = `╔══════════════════╗
+║ Monday │ 7:50 AM ║
+╚══════════════════╝`;
+} else if (currentFrame === 20) {
+        clock.innerHTML = `╔══════════════════╗
+║ Monday │ 7:51 AM ║
+╚══════════════════╝`;
+} else if (currentFrame === 28) {
+        clock.innerHTML = `╔══════════════════╗
+║ Monday │ 7:52 AM ║
+╚══════════════════╝`;
+} else if (currentFrame === 33) {
+              clock.innerHTML = `╔══════════════════╗
+║ Monday │ 7:54 AM ║
+╚══════════════════╝`;
+} else if (currentFrame === 35) {
+                          clock.innerHTML = `╔══════════════════╗
+║ Monday │ 8:27 AM ║
+╚══════════════════╝`;
+} else if (currentFrame === 37) {
+                          clock.innerHTML = `╔══════════════════╗
+║ Monday │ 8:30 AM ║
+╚══════════════════╝`;
+} else if (currentFrame === 39) {
+                          clock.innerHTML = `╔══════════════════╗
+║ Monday │ 9:18 AM ║
+╚══════════════════╝`;
+} else if (currentFrame === 41) {
+                          clock.innerHTML = `╔══════════════════╗
+║ Monday │ 9:20 AM ║
+╚══════════════════╝`;
+}
 
       const fade = document.getElementById("fade");
       if (currentFrame >= 18 && currentFrame <= 19) {
@@ -761,7 +1006,7 @@
         fade.style.opacity = 0;
       }
 
-      if (currentFrame === 32) {
+      if (currentFrame === 43) {
         setTimeout(() => {
           window.location.href = "hallway.html";
         }, 700);
@@ -770,7 +1015,18 @@
       }
     }
 
-    setInterval(updateFrame, 700);
+    function playFrames() {
+      updateFrame();
+
+      let delay = 200;
+      if (currentFrame === 34 || currentFrame === 36 || currentFrame === 38 || currentFrame === 40 || currentFrame === 42) {
+        delay = 3000;
+      }
+
+      setTimeout(playFrames, delay);
+    }
+
+playFrames();
   </script>
 </body>
 </html>
