--- a/classroom.html
+++ b/classroom.html
@@ -942,6 +942,90 @@
                      \\_____________\         \\_____________\         \\_____________\
                       \,------------'          \,------------'          \,------------'
       </pre>
+      <pre id="self43" style="display: none;">
+                                                               . - .
+                                                    . - .     // v \\        . - .
+                                                   ( /  \    ( \   / )      / \  \
+                                                   (_)  /      .-'-.        \  \_/
+                                                    .-'-.     /|  . - .     .-'-.
+        .-------------.          .--------- . -౨ৎ.  |_|_| .----- /     \    |_|_|
+        |\             \         |\        // ^ \\  /_o_\ |\     \,,,,,/ \  | o |
+         \\_____________\         \\_____ ()\   /()  | |   \\____ .-'-. __\ |_|_|
+          \,------------'          \,------ .-'-.    . .    \,-- /|___|\ -'  . .
+                                           //   \\               '| | |'
+           . - . ------- . - .     . - . ------------.          .-------------.
+          / /  \        / / v\    / \  \              \         |\             \
+         (__)  / _____  |,|  /    \  (  ) _____________\         \\_____________\
+           .-'-. ,------ .-'-.     .-'-. \,------------'          \,------------'
+           |_|_|         |_|_|     |___|
+           | o |    .-------------.| | |     .-------------.          .-------------.
+           |___|    |\             \_|_|     |\             \         |\             \
+            . .      \\_____________\ .       \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self44" style="display: none;">
+                                                               . - .
+                                                    . - .     // v \\        . - .
+                                                   ( /  \    ( \   / )      / \  \
+                                                   (_)  /      .-'-.        \  \_/
+                                                    .-'-.     /|  . - .     .-'-.
+        .-------------.          .--------- . -౨ৎ.  |_|_| .----- /     \    |_|_|
+        |\             \         |\        // ^ \\  /_o_\ |\     \,,,,,/ \  | o |
+         \\_____________\         \\_____ ()\   /()  | |   \\____ .-'-. __\ |_|_|
+          \,------------'          \,------ .-'-.    . .    \,-- /|___|\ -'  . .
+                                           //   \\               '| | |'
+           . - . ------- . - .     . - . ------------.          .-------------.
+          / /  \        / / v\    / \  \              \         |\             \
+         (__)  / _____  |,|  /    \  (  ) _____________\         \\_____________\
+           .-'-. ,------ .-'-.     .-'-. \,------------'          \,------------'
+           |_|_|         |_|_|     |___|
+           | o |    .-------------.| | |     .-------------.          .-------------.
+           |___|    |\             \_|_|     |\             \         |\             \
+            . .      \\_____________\ .       \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self45" style="display: none;">
+                                      . - .                    . - .
+                                     (/   \)                  // v \\
+                                     (\   /)                 ( \   / )
+                                      .-'-.                    .-'-.
+                                     /|___|\                  /|___|\
+        .-------------.          .--------- . -౨ৎ.        .--------- . - .
+        |\         /   \         |\        // ^ \\        |\        //   \\
+         \\_______ \   /          \\_____ ()\   /()        \\______ \\   //
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                  /|___|\                  //   \\                  /|___|\
+              .--------- . - .         .--------- . - .         .--------- -.-.
+              |\        // v \\        |\        //   \\        |\         / v \
+               \\_______|\   /|         \\_____ (_\   /_)        \\_______ \   /
+                \,----- |.-'-.|          \,------ .-'-.           \,------ .-'-.
+                        /|___|\                  /|___|\                  /|___|\
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self46" style="display: none;">
+                                      . - .                    . - .
+                                     (/   \)                  // v \\
+                                     (\   /)                 ( \   / )
+                                      .-'-.                    .-'-.
+                                     /|___|\                  /|___|\
+        .-------------.          .--------- . -౨ৎ.        .--------- . - .
+        |\         /   \         |\        // ^ \\        |\        //   \\
+         \\_______ \   /          \\_____ ()\   /()        \\______ \\   //
+          \,------ .-'-.           \,------ .-'-.           \,------ .-'-.
+                  /|___|\                  //   \\                  /|___|\
+              .--------- . - .         .--------- . - .         .--------- -.-.
+              |\        // v \\        |\        //   \\        |\         / v \
+               \\_______|\   /|         \\_____ (_\   /_)        \\_______ \   /
+                \,----- |.-'-.|          \,------ .-'-.           \,------ .-'-.
+                        /|___|\                  /|___|\                  /|___|\
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
     </div>
   </div>
   <div id="fade"></div>
@@ -953,7 +1037,7 @@
       }, 1000);
     };
 
-    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32", "self33", "self34", "self35", "self36", "self37", "self38", "self39", "self40", "self41", "self42"];
+    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32", "self33", "self34", "self35", "self36", "self37", "self38", "self39", "self40", "self41", "self42", "self43", "self44", "self45", "self46"];
     let currentFrame = 0;
 
     function updateFrame() {
@@ -993,6 +1077,14 @@
                           clock.innerHTML = `╔══════════════════╗
 ║ Monday │ 9:20 AM ║
 ╚══════════════════╝`;
+} else if (currentFrame === 43) {
+                          clock.innerHTML = `╔═══════════════════╗
+║ Monday │ 10:08 AM ║
+╚═══════════════════╝`;
+} else if (currentFrame === 45) {
+                          clock.innerHTML = `╔═══════════════════╗
+║ Monday │ 10:10 AM ║
+╚═══════════════════╝`;
 }
 
       const fade = document.getElementById("fade");
@@ -1006,7 +1098,7 @@
         fade.style.opacity = 0;
       }
 
-      if (currentFrame === 43) {
+      if (currentFrame === 47) {
         setTimeout(() => {
           window.location.href = "hallway.html";
         }, 700);
@@ -1019,7 +1111,7 @@
       updateFrame();
 
       let delay = 200;
-      if (currentFrame === 34 || currentFrame === 36 || currentFrame === 38 || currentFrame === 40 || currentFrame === 42) {
+      if (currentFrame === 34 || currentFrame === 36 || currentFrame === 38 || currentFrame === 40 || currentFrame === 42 || currentFrame === 44 || currentFrame === 46) {
         delay = 3000;
       }
 
