--- a/classroom.html
+++ b/classroom.html
@@ -1026,6 +1026,90 @@
                      \\_____________\         \\_____________\         \\_____________\
                       \,------------'          \,------------'          \,------------'
       </pre>
+      <pre id="self47" style="display: none;">
+              .-.
+  . - .      / ^ \
+ /  / \      \   /         .-.
+(__)  /      .-'-.        / \ \
+  .-'-.     /|___|\       \  \/
+  |_|_| .--------- . - .  .-'-.  .--------- . -౨ৎ.        .-------------.
+  /_o_\ |\        /     \ |_|_|  |\        // ^ \\        |\             \
+   | |   \\_____ (       )| o |   \\_____ ()\   /()        \\_____________\
+   . .    \,---- .'     '.|_|_|    \,------ .-'-.           \,------------'
+                 (,,,,,,,) . .             //   \\
+              .-------------.          .--------- . - .     . - .-------------.
+              |\             \         . - .     // ^ \\   / \  .-.            \
+               \\_____________\       /  / \ __ ( \   / )  \  (/v\ \ ___________\
+                \,------------'      (  )  / -- /,.-'-.,\  .-'-\  \/ -----------'
+                                    ,'  /'-.     /|___|\   |_|_.-'-.
+                    .-------------. (,,)_|_| .-------------. o |_|_|  .-------------.
+                    |\             \   /_o_\ |\             \__| o |  |\             \
+                     \\_____________\   | |   \\_____________\.|_|_|   \\_____________\
+                      \,------------'   . .    \,------------'  . .     \,------------'
+      </pre>
+      <pre id="self48" style="display: none;">
+              .-.
+  . - .      / ^ \
+ /  / \      \   /         .-.
+(__)  /      .-'-.        / \ \
+  .-'-.     /|___|\       \  \/
+  |_|_| .--------- . - .  .-'-.  .--------- . -౨ৎ.        .-------------.
+  /_o_\ |\        /     \ |_|_|  |\        // ^ \\        |\             \
+   | |   \\_____ (       )| o |   \\_____ ()\   /()        \\_____________\
+   . .    \,---- .'     '.|_|_|    \,------ .-'-.           \,------------'
+                 (,,,,,,,) . .             //   \\
+              .-------------.          .--------- . - .     . - .-------------.
+              |\             \         . - .     // ^ \\   / \  .-.            \
+               \\_____________\       /  / \ __ ( \   / )  \  (/v\ \ ___________\
+                \,------------'      (  )  / -- /,.-'-.,\  .-'-\  \/ -----------'
+                                    ,'  /'-.     /|___|\   |_|_.-'-.
+                    .-------------. (,,)_|_| .-------------. o |_|_|  .-------------.
+                    |\             \   /_o_\ |\             \__| o |  |\             \
+                     \\_____________\   | |   \\_____________\.|_|_|   \\_____________\
+                      \,------------'   . .    \,------------'  . .     \,------------'
+      </pre>
+      <pre id="self49" style="display: none;">
+              .-.                     . - .                    . - .
+             / ^ \                   (/ ^ \)                  // v \\
+             \   /                    \   /                  |,\   /,|
+             .-'-.                    .-'-.                    .-'-.
+            /|___|\                  /|___|\                  /|___|\
+        .----------. - .         .--------- . -౨ৎ.        .--------- . - .
+        |\        // ^ \\        |\        // ^ \\        |\        // ^ \\
+         \\_____ ( \   / )        \\_____ ()\   /()        \\_____ (_\   /_)
+          \,---- / .-'-. \         \,------ .-'-.           \,------ .-'-.
+                ( /|___|\ )                //   \\                  /|___|\
+              .--------- . - .         .--------- . - .         .--------- . - .
+              |\        // ^ \\        |\        // ^ \\        |\        (/ ^ \)
+               \\_____ (_\   /_)        \\_____ ( \   / )        \\_______ \   /
+                \,------ .-'-.           \,---- /,.-'-.,\         \,------ .-'-.
+                        /|___|\                  /|___|\                  /|___|\
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
+      <pre id="self50" style="display: none;">
+              .-.                     . - .                    . - .
+             / ^ \                   (/ ^ \)                  // v \\
+             \   /                    \   /                  |,\   /,|
+             .-'-.                    .-'-.                    .-'-.
+            /|___|\                  /|___|\                  /|___|\
+        .----------. - .         .--------- . -౨ৎ.        .--------- . - .
+        |\        // ^ \\        |\        // ^ \\        |\        // ^ \\
+         \\_____ ( \   / )        \\_____ ()\   /()        \\_____ (_\   /_)
+          \,---- / .-'-. \         \,------ .-'-.           \,------ .-'-.
+                ( /|___|\ )                //   \\                  /|___|\
+              .--------- . - .         .--------- . - .         .--------- . - .
+              |\        // ^ \\        |\        // ^ \\        |\        (/ ^ \)
+               \\_____ (_\   /_)        \\_____ ( \   / )        \\_______ \   /
+                \,------ .-'-.           \,---- /,.-'-.,\         \,------ .-'-.
+                        /|___|\                  /|___|\                  /|___|\
+                    .-------------.          .-------------.          .-------------.
+                    |\             \         |\             \         |\             \
+                     \\_____________\         \\_____________\         \\_____________\
+                      \,------------'          \,------------'          \,------------'
+      </pre>
     </div>
   </div>
   <div id="fade"></div>
@@ -1037,7 +1121,7 @@
       }, 1000);
     };
 
-    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32", "self33", "self34", "self35", "self36", "self37", "self38", "self39", "self40", "self41", "self42", "self43", "self44", "self45", "self46"];
+    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32", "self33", "self34", "self35", "self36", "self37", "self38", "self39", "self40", "self41", "self42", "self43", "self44", "self45", "self46", "self47", "self48", "self49", "self50"];
     let currentFrame = 0;
 
     function updateFrame() {
@@ -1085,6 +1169,14 @@
                           clock.innerHTML = `╔═══════════════════╗
 ║ Monday │ 10:10 AM ║
 ╚═══════════════════╝`;
+} else if (currentFrame === 47) {
+                          clock.innerHTML = `╔═══════════════════╗
+║ Monday │ 10:49 AM ║
+╚═══════════════════╝`;
+} else if (currentFrame === 49) {
+                          clock.innerHTML = `╔═══════════════════╗
+║ Monday │ 10:50 AM ║
+╚═══════════════════╝`;
 }
 
       const fade = document.getElementById("fade");
@@ -1094,13 +1186,15 @@
         fade.style.opacity = 1;
       } else if (currentFrame >= 31 && currentFrame <= 32) {
         fade.style.opacity = 1;
+      } else if (currentFrame > 49 && currentFrame <= 50) {
+        fade.style.opacity = 1;
       } else if (currentFrame >= 20) {
         fade.style.opacity = 0;
       }
 
-      if (currentFrame === 47) {
+      if (currentFrame === 50) {
         setTimeout(() => {
-          window.location.href = "hallway.html";
+          window.location.href = "cafeteria.html";
         }, 700);
       } else {
         currentFrame = (currentFrame + 1) % frames.length;
@@ -1110,8 +1204,8 @@
     function playFrames() {
       updateFrame();
 
-      let delay = 200;
-      if (currentFrame === 34 || currentFrame === 36 || currentFrame === 38 || currentFrame === 40 || currentFrame === 42 || currentFrame === 44 || currentFrame === 46) {
+      let delay = 100;
+      if (currentFrame === 34 || currentFrame === 36 || currentFrame === 38 || currentFrame === 40 || currentFrame === 42 || currentFrame === 44 || currentFrame === 46 || currentFrame === 48 || currentFrame === 50) {
         delay = 3000;
       }
 
