--- a/morning.html
+++ b/morning.html
@@ -20,7 +20,7 @@
 </style>
 <body>
   <div id="fade-in"></div>
-  <pre id="ascii-door">
+  <!-- <pre id="ascii-door">
     __________
    |          |
    |          |
@@ -35,7 +35,7 @@
    |          |
    |          |
  __|__________|
-</pre>
+</pre> -->
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -43,22 +43,30 @@
 ║ Monday │ 6:20 AM ║
 ╚══════════════════╝
       </pre>
-      <pre class="asciiAlign"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      _      ()              ()      _
-     / \     ||______________||     / \
-    /___\    |                |    /___\
-      |      |                |      |
-     (_)     |_______  _______|     (_)
-  ___/_\___  {___O___}{_______}  ___/_\___
-   |__~__|   %%%%%%%%%%%%%%%%%%   |__~__|
-___|_____|__%%%%%%%%%%%%%%%%%%%%__|_____|___
-   |     | %%%%%%%%%%%%%%%%%%%%%% |     |
-          %%%%%%%%%%%%%%%%%%%%%%%%
-         %%%%%%%%%%%%%%%%%%%%%%%%%%
-        %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-       /||||||||||||||||||||||||||||\
-       ||||||||||||||||||||||||||||||
-       ||||||||||||||||||||||||||||||
+      <pre class="asciiAlign">
+
+                                                           __________
+                                                          |┌───┐┌───┐|
+                                                          |│   ││   │|
+                                                          |│   ││   │|
+                                                          |│   ││   │|
+   _____________                                          |│   ││   │|
+   |     ~     |                                          |│   ││   │|
+   |___________|                                          |└───┘└───┘|
+   |     ~     |   ()______________()                     |          |
+   |___________|   |                |                     |        0 |
+   |     ~     |   |                |                     |          |
+   |___________|   |_____ . - . ____|                     |          |
+   |     ~     |   (____ // ^ \\ ___)  _____________      |          |
+   |___________|   %%%%%%%%%%%%%%%%%%   |---------|       |          |
+ __|___________|__%%%%%%%%%%%%%%%%%%%%__|_________|_______|__________|___
+                 %%%%%%%%%%%%%%%%%%%%%% |         |
+                %%%%%%%%%%%%%%%%%%%%%%%%
+               %%%%%%%%%%%%%%%%%%%%%%%%%%
+              %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+             /----------------------------\
+             |----------------------------|
+             |                            |
       </pre>
       <div id="dialogue-box" class="dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
@@ -110,7 +118,7 @@ It's 7am. I don't have time to eat breakfast anymore...
       </div>
     </div>
   </div>
-  <pre>
+  <!-- <pre>
 
 o(=(=(=(=)=)=)=)o
  !!!!!!}!{!!!!!!
@@ -126,7 +134,7 @@ o(=(=(=(=)=)=)=)o
  !!!____|____!!!
  !!!=========!!!
 _!!!_________!!!__
-  </pre>
+  </pre> -->
   <script>
     window.onload = function() {
       document.getElementById("fade-in").style.opacity = "0";
